--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "color-picker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skaadoosh.github.io/React-color-picker",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -13,6 +14,7 @@
     "array-move": "^4.0.0",
     "chroma-js": "^2.4.2",
     "emoji-picker-react": "^3.5.1",
+    "gh-pages": "^4.0.0",
     "rc-slider": "^10.0.0",
     "react": "^18.1.0",
     "react-color": "^2.19.3",
@@ -30,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
